# ec_prototype

./: .gitignore  docker-compose-dev.yml  docker-compose.yml  readme.md  tutorials.md
build_docker/: Dockerfile  build_docker  install_third_party.sh
project_codes/: readme.txt  run_get_result.py
project_codes/LRCs/: CMakeLists.txt  test_tools.cpp
project_codes/LRCs/include/: General.h  devcommon.h  lrc_definition.h  metadefinition.h
project_codes/LRCs/pybind_cpp/: interface.cpp  interface.h  pybind.cpp
project_codes/LRCs/src/: Azure_LRC.cpp  Azure_LRC_1.cpp  General.cpp  Optimal_LRC.cpp  Xorbas.cpp
project_codes/draw_pic/: readme.md  test_tools.cpp
project_codes/draw_pic/draw_sim/: configs.py  draw_simulation.py  function.py
project_codes/draw_pic/pybind_cpp/: interface.h
project_codes/exp_result/: result.txt
project_codes/exp_tools/: config.py  file_manage.py  generate_configs.py  parse_parameters.py  run_encode_exp.py  start_close_nodes.py
project_codes/prototype/: CMakeLists.txt
project_codes/prototype/config/: cluster_information.xml
project_codes/prototype/include/: azure_lrc.h  client.h  coordinator.h  datanode.h  devcommon.h  meta_definition.h  proxy.h  toolbox.h
project_codes/prototype/include/proto/: coordinator.proto  proxy.proto
project_codes/prototype/run_cpp/: run_client.cpp  run_coordinator.cpp  run_datanode.cpp  run_proxy.cpp  test_tools.cpp
project_codes/prototype/src/: client_from_datanode.cpp  client_get.cpp  client_init_proxy_coordinator.cpp  client_parse_command.cpp  client_set.cpp  client_set_parameter.cpp  client_to_datanode.cpp  coordinator_get.cpp  coordinator_get_proxy_info.cpp  coordinator_init.cpp  coordinator_set.cpp  coordinator_set_parameter.cpp  datanode.cpp  proxy_calculate_inner.cpp  proxy_checkalive.cpp  proxy_from_datanode.cpp  proxy_init_coordinator.cpp  proxy_to_datanode.cpp  toolbox.cpp
project_codes/simple_test/: main.cpp  test_c.cpp  test_h.h
project_codes/small_tools/: generator_sh.py
